# Blitz_Coder

./: README.md  Scaffolding_Agent.py
blitz_cli/: .gitignore  CLI_coder.py  Dockerfile  MANIFEST.in  README.md  __init__.py  graphapi.py  install.py  install_and_test.py  main.py  pyproject.toml  setup.py  test_imports.py
blitz_cli/config/: __init__.py  settings.py
blitz_cli/config/templates/Agentic_AI_Frameworks/: langraph_template.txt
blitz_cli/frontend/: package.json
blitz_cli/frontend/src/: App.tsx  index.css
blitz_cli/frontend/src/components/: AuthModal.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Navigation.tsx  Pricing.tsx
blitz_cli/models/: llm_model.py
blitz_cli/observability/: tracing.py
blitz_cli/scripts/: blitzcoder  blitzcoder.bat
blitz_cli/src/: __init__.py
blitz_cli/src/blitzcoder/: __init__.py
blitz_cli/src/blitzcoder/cli/: CLI_coder.py
blitz_cli/src/main/: graphapi.py
blitz_cli/tools/: agent_refactor_code.py  change_directory.py  create_or_delete_file.py  create_project_structure_at_path.py  current_directory.py  error_detection.py  execute_python_code.py  explain_code.py  extract_content_within_a_file.py  generate_architecture_plan.py  generate_file_content.py  generate_folder_creation_script.py  generate_project_structure.py  inspect_a_file.py  look_for_file_or_directory.py  navigate_entire_codebase_given_path.py  refactoring_code.py  run_shell_commands.py  scaffold_and_generate_files.py  windows_powershell_command.py  write_code_to_file.py
blitz_cli/utils/: helpers.py  retry.py
frontend/: .gitignore  .prettierrc  bun.lockb  (+4 more)
(+4 files in other folders)
